Bug 1552248 support ftp channel in proxy api r=mayhemer,kmag

ChannelWrapper is used throughout webext APIs and it requires a channel to support weakref.
FTPChannel did not, thus ftp requests did not go through proxy.onRequest.

Differential Revision: https://phabricator.services.mozilla.com/D31540